# hl-evm-rpc

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  deploy.sh  fly.toml  justfile
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  send.html  wallet.html
src/evm/: abi.rs  address.rs  executor.rs  mod.rs
src/hl/: cache.rs  mod.rs  types.rs
src/rpc/: methods.rs  mod.rs  types.rs
tests/: rpc_tests.rs
