[package]
name = "hl-evm-rpc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ethereum JSON-RPC proxy for HyperLiquid exchange balances"
repository = "https://github.com/nikicat/hl-evm-rpc"

[dependencies]
axum = "0.8"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hex = "0.4"
libc = "0.2"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
revm = { version = "36", default-features = false, features = ["std"] }
revm-inspector = "17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
